--- a/OOTDAY/app/src/main/res/drawable/btn_back.xml
+++ b/OOTDAY/app/src/main/res/drawable/btn_back.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="12">
   <path
       android:pathData="M7.705,10.59L3.125,6L7.705,1.41L6.295,0L0.295,6L6.295,12L7.705,10.59Z"
-      android:fillColor="#333333"
+      android:fillColor="@color/font_gray"
       android:fillAlpha="0.5"/>
 </vector>
