--- a/OOTDAY/app/src/main/res/layout/dialog_logout.xml
+++ b/OOTDAY/app/src/main/res/layout/dialog_logout.xml
@@ -12,47 +12,32 @@
     android:id="@+id/dialog_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Mood를 추가하시겠습니까?"
+    android:text="OOTDay에서"
     android:textSize="18dp"
     android:fontFamily="@font/noto_sans_kr_bold"
     android:textColor="@color/font_gray"
-        android:layout_marginTop="-10dp"
+        android:layout_marginTop="-15dp"
     android:alpha="0.8"
     android:textStyle="bold"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent" />
 
-    <EditText
-        android:id="@+id/plus_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="입력은 한글로, 최대 5글자까지 가능해요."
-        android:fontFamily="@font/noto_sans_kr_regular"
-        android:textSize="@dimen/body_small_size"
-        android:paddingVertical="2dp"
-        android:gravity="center"
-        android:maxLength="5"
-        android:textColorHint="@color/gray_200"
-        android:backgroundTint="@color/sl_edittext_selector"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/ic_editText"
+    <TextView
+        android:id="@+id/dialog_title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_edittext"
+        android:text="로그아웃 하시겠습니까?"
+        android:textSize="18dp"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:textColor="@color/font_gray"
+        android:layout_marginTop="-30dp"
+        android:alpha="0.8"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/dialog_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        android:layout_marginBottom="2dp"
-        app:layout_constraintEnd_toEndOf="@+id/plus_edit_text"
-        app:layout_constraintTop_toTopOf="@+id/plus_edit_text"
-        app:layout_constraintBottom_toBottomOf="@+id/plus_edit_text"
-        />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -64,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plus_edit_text">
+        app:layout_constraintTop_toBottomOf="@id/dialog_title2">
 
         <ImageButton
             android:id="@+id/btn_cancel"
