--- a/OOTDAY/app/src/main/res/layout/first_closet_result_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/first_closet_result_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    android:background="@color/gray_400">
 
     <GridLayout
         android:id="@+id/grid_layout"
