--- a/OOTDAY/app/src/main/res/layout/profile_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/profile_fragment.xml
@@ -76,7 +76,7 @@
         android:id="@+id/profile_view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/gray_100"
+        android:background="@color/gray_200"
 
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="30dp"
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="프로필 설정"
-                android:fontFamily="@font/noto_sans_kr_medium"
+                android:fontFamily="@font/noto_sans_kr_regular"
                 android:textSize="@dimen/body_medium_large_size"
                 android:textColor="@color/font_gray"
                 android:alpha="0.8"
@@ -136,6 +136,8 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/btn_right"
 
+                android:clickable="true"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -144,6 +146,184 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/my_closet_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal"
+            android:gravity="center"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_setting_container"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            >
+
+            <ImageView
+                android:id="@+id/my_closet_ic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_my_closet"
+
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/my_closet_text"
+                />
+
+            <TextView
+                android:id="@+id/my_closet_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내 옷장"
+                android:fontFamily="@font/noto_sans_kr_regular"
+                android:textSize="@dimen/body_medium_large_size"
+                android:textColor="@color/font_gray"
+                android:alpha="0.8"
+
+                android:layout_marginLeft="12dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/my_closet_ic"
+                />
+
+            <ImageView
+                android:id="@+id/my_closet_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_right"
+
+                android:clickable="true"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/my_feed_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal"
+            android:gravity="center"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_closet_container"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="30dp"
+            >
+
+            <ImageView
+                android:id="@+id/my_feed_ic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_myfeed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/my_feed_text"
+                />
+
+            <TextView
+                android:id="@+id/my_feed_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내 피드"
+                android:fontFamily="@font/noto_sans_kr_regular"
+                android:textSize="@dimen/body_medium_large_size"
+                android:textColor="@color/font_gray"
+                android:alpha="0.8"
+
+                android:layout_marginLeft="9dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/my_feed_ic"
+                />
+
+            <ImageView
+                android:id="@+id/my_feed_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_right"
+
+                android:clickable="true"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/my_heart_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal"
+            android:gravity="center"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_feed_container"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="30dp"
+            >
+
+            <ImageView
+                android:id="@+id/my_heart_ic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_heart"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/my_heart_text"
+                />
+
+            <TextView
+                android:id="@+id/my_heart_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="좋아요 누른 피드"
+                android:fontFamily="@font/noto_sans_kr_regular"
+                android:textSize="@dimen/body_medium_large_size"
+                android:textColor="@color/font_gray"
+                android:alpha="0.8"
+
+                android:layout_marginLeft="9dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/my_heart_ic"
+                />
+
+            <ImageView
+                android:id="@+id/my_heart_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_right"
+
+                android:clickable="true"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
